# ytdc

./: .gitignore  CLAUDE.md  PLAN.md  README.md  main.py  pyproject.toml
scripts/: subscribe-list.example.txt  subscribe.py
tests/: test_analyze.py  test_auth.py  test_execute.py  test_history_html.py  test_subscribe.py
ytdc/: __init__.py  auth.py  cli.py  errors.py  execute.py  history.py  likes.py  report.py  subs.py  subscribe.py
